<resources>
    <string name="app_name">FirebaseKotlinCRUD</string>
    <string name="all">TODO</string>
    <string name="name">Lago de Coatepeque</string>
    <string name="ubication">Santa Ana</string>
    <string name="title_activity_main">OneWay</string>
    <string name="subtitle_activity_main">2020</string>
    <string name="title_activity_add">Nuevo Lugar Turistico</string>
    <string name="title_activity_add_notes">Nueva Nota de Viaje</string>
    <string name="title_activity_edit">Datos del Lugar</string>
    <string name="spinner_form">Selecciona el tipo de lugar</string>
    <string name="name_form">Nombre</string>
    <string name="date_form">Ubicación</string>
    <string name="date_form_notes">Fecha</string>
    <string name="url_form">Url imagen</string>
    <string name="description_form">Descripción</string>
    <string name="save">Guardar</string>
    <string name="incoming">Estamos Trabajando en ello</string>
    <string name="notes">Notas de Viaje</string>
    <string name="description">Lago de coatepeque</string>
    <string name="Name_APP">OneWay</string>
    <string name="type">Categoría</string>
    <string name="categoria1">Playas</string>
    <string name="categoria2">Centros Comerciales</string>
    <string name="categoria3">Centros Turísticos</string>
    <string name="categoria4">Lagos</string>
    <string name="favoritos">Favoritos</string>
    <string name="categoria">Categorias</string>
</resources>