<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    tools:context=".PlacesDetails">


    <ImageView
        android:id="@+id/posterImgeView"
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:contentDescription="@string/all"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/lago"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="290dp"
        app:cardMaxElevation="0dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="180dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="180dp"
                android:layout_marginBottom="15dp"
                android:text="@string/name"
                android:textColor="@color/text_dark"
                android:textStyle="bold"
                android:textSize="24sp" />


            <TextView
                android:id="@+id/dateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:textColor="#3D5AFE"
                android:text="@string/ubication" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/purple_500"
                android:textSize="17dp"
                android:text="@string/description" />

            <TextView
                android:id="@+id/typeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/purple_500"
                android:textSize="17dp"
                android:text="@string/type" />



        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/FavoriteActionButton"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"

        android:contentDescription="@string/all"
        app:layout_constraintBottom_toBottomOf="parent"


        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:srcCompat="@drawable/ic_baseline_star_24"
        tools:ignore="MissingConstraints,VectorDrawableCompat" />

</androidx.constraintlayout.widget.ConstraintLayout>